Fix too small #lang margin

--- a/designs/pepa-linha/adminer.css
+++ b/designs/pepa-linha/adminer.css
@@ -575,7 +575,7 @@ label {
 	top: 55px;
 	right: 100%;
 	z-index: 10;
-	margin-right: -331px;
+	margin-right: -340px;
 	line-height: normal;
 	padding: 0;
 	left: auto;
